# table2rules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  benchmark_tables.py  cleanup.py  debug_repaired.html  grid_parser.py  input.md  maze_pathfinder.py  models.py  output.json  output.md  pyproject.toml  quality_gate.py  rag_fix.py  simple_repair.py  table2rules.py  table_classifier.py  table_processor_factory.py  table_processors.py  table_repair.py  technical_guide_table2rules.md
.claude/: settings.json
.github/workflows/: release.yml  test.yml
benchmarks/: README.md
benchmarks/gold/: table2-invalid_table.out.txt  table3.out.txt  table4.out.txt
benchmarks/gold/adversarial/: evil1-malformed-nesting.out.txt  evil10-multiple-tbody.out.txt  evil11-zero-width-chars.out.txt  evil12-overwide-colspan.out.txt  evil13-empty-rows-pdf-artifact.out.txt  evil14-tfoot-before-tbody.out.txt  evil15-rtl-mixed-scripts.out.txt  evil16-midtable-header-reset-columns.out.txt  evil17-layout-form-table.out.txt  evil18-block-content-in-cells.out.txt  evil19-wide-title-header.out.txt  evil3-multi-top-with-nested.out.txt  evil5-sparse-merged-matrix.out.txt  evil7-insurance-benefits-rowspan-heavy.out.txt  evil8-insurance-subitem-sparse-rows.out.txt  evil9-ocr-repeated-headers-in-body.out.txt  receipt-with-headers.out.txt
benchmarks/gold/evil/: evil2-conflicting-spans-scope.out.txt  evil3-multi-top-with-nested.out.txt  evil4-midtable-header-reset.out.txt  evil6-footer-lookalike-data.out.txt
benchmarks/gold/real-world/: real-additional-complex.out.txt
benchmarks/gold/regression/: regression-multi-top-level.out.txt
benchmarks/gold/smoke/: smoke-key-value.out.txt  smoke-simple-data.out.txt
benchmarks/gold/structured/: hierarchical-sales-summary.out.txt  hierarchical-team-performance.out.txt  real-benefits-broken-currency.out.txt  real-invalid-markup-enterprise.out.txt
docs/: architecture.md  examples.md  integrating.md  validation.md
scripts/: benchmark.py  build_fintabnet_fixtures.py  build_pubtabnet_fixtures.py  fuzz.py  measure_token_savings.py
src/table2rules/: __init__.py  __main__.py  _core.py  cleanup.py  errors.py  grid_parser.py  maze_pathfinder.py  models.py  quality_gate.py  report.py  simple_repair.py  spans.py
src/table2rules/exporters/: __init__.py  base.py  rules.py
test tables/: table1.md  table2-invalid_table.md  table6-multi-top.md
test tables/cord/: cord_0092.md
test tables/evil/: evil1-malformed-nesting.md  evil3-multi-top-with-nested.md  evil7-insurance-benefits-rowspan-heavy.md  evil9-ocr-repeated-headers-in-body.md
test tables/hierarchical/: table1_h.md  table2_h.md
test tables/smoke/: smoke-key-value.md  smoke-simple-data.md
tests/: README.md  benchmark_tables.py  test_corpus.py  test_correctness_oracle.py  test_determinism.py  test_public_api.py  test_regression_golds.py  test_robustness_mutations.py
tests/adversarial/: evil11-zero-width-chars.md  evil13-empty-rows-pdf-artifact.md  evil17-layout-form-table.md  evil2-conflicting-spans-scope.md  evil24-rich-inline-markup.md  evil4-midtable-header-reset.md  evil5-sparse-merged-matrix.md  evil8-insurance-subitem-sparse-rows.md  receipt-with-headers.md  title-row-small-table.md
tests/fixtures/attribute-value/: colon-in-label.md  inline-markup.md  sectioned-tbody.md
tests/fixtures/enumeration/: glossary.md  three-column-countries.md
tests/fixtures/form/: fieldset-grouped.md  input-fields.md  left-header-multivalue.md  left-header-question-answer.md
tests/fixtures/formatting/: image-text-layout.md  two-column-article.md
tests/fixtures/listing/: entity-attributes-no-header.md  receipt-cheese-john.md  receipt-coffee-modifiers.md  receipt-numeric-sparse.md  transactions-with-subtotals.md
tests/fixtures/matrix/: financial-br-in-header.md  financial-emdash-not-applicable.md  financial-footnote-in-data.md  financial-footnote-in-header.md  financial-interspersed-group-totals.md  financial-mixed-currency-symbols.md  financial-nbsp-indented-rows.md  financial-parenthesized-negatives.md  financial-three-level-header.md  financial-year-ended-group.md  footnote-tail-annotations.md  full-width-note-colspan.md  kitchen-sink-hostile.md  label-only-rowgroup-stub-column.md  label-only-rowgroup-vs-data-row.md  label-only-rowgroup.md  label-only-title-number-key-matrix.md  label-only-title-then-description-band.md  large-dense-grid.md  midtable-header-reset-columns.md  rowgroup-nested-bands.md  scope-rowgroup-colgroup.md  section-divider-pl.md  section-divider-td-colspan.md  transposed-empty-corner-filled.md  transposed-empty-corner-roster.md  wide-title-header.md
tests/fixtures/navigational/: footer-links.md  sidebar-menu.md
tests/fixtures/relational/: block-content-cells.md  despanned-section-headers.md  footer-lookalike.md  headerless-corner-stub-inversion.md  headerless-implicit-rowspan-group.md  headerless-stub-pyramid.md  invalid-span-values.md  multi-tbody-section-restart.md  multiple-tbody.md  overwide-colspan.md  rtl-mixed-scripts.md  sparse-rows.md  (+2 more)
tests/realworld/: DATA_SOURCES.md
tests/structured/: real-clinical-trial.md
(+1309 files in other folders)
