[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "table2rules"
version = "0.2.0"
description = "Convert HTML tables to flat, LLM-friendly rules using spatial pathfinding."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Maish Nichani" },
]
dependencies = [
    "beautifulsoup4>=4.13.0,<5",
]
keywords = ["html", "tables", "llm", "parsing", "rules", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
table2rules = "table2rules.__main__:main"

[project.urls]
Repository = "https://github.com/pebbleroad/table2rules"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
table2rules = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

