[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "table2rules"
version = "0.2.0"
description = "Convert HTML tables to flat, LLM-friendly rules using spatial pathfinding."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PebbleRoad Pte Ltd" },
]
dependencies = [
    "beautifulsoup4>=4.13.0,<5",
]
keywords = ["html", "tables", "llm", "parsing", "rules", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
table2rules = "table2rules.__main__:main"

[project.urls]
Homepage = "https://github.com/pebbleroad/table2rules"
Repository = "https://github.com/pebbleroad/table2rules"
Issues = "https://github.com/pebbleroad/table2rules/issues"
Changelog = "https://github.com/pebbleroad/table2rules/blob/main/CHANGELOG.md"
Documentation = "https://github.com/pebbleroad/table2rules/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
table2rules = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

